--- a/src/main/resources/templates/newpost.html
+++ b/src/main/resources/templates/newpost.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>맛집 - 새 글 작성</title>
+    <title>newpost</title>
     <link rel="stylesheet" href="newpost.css">
 </head>
 <body>
